Kaggle Notebook | Mini Batch gradient descent from scratch | Version 2

--- a/mini-batch-gradient-descent-from-scratch.ipynb
+++ b/mini-batch-gradient-descent-from-scratch.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aa97943f",
+   "id": "2204167c",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:14:57.091375Z",
-     "iopub.status.busy": "2025-12-24T09:14:57.090752Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.152612Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.151689Z"
+     "iopub.execute_input": "2025-12-24T12:02:06.359799Z",
+     "iopub.status.busy": "2025-12-24T12:02:06.359440Z",
+     "iopub.status.idle": "2025-12-24T12:02:10.815652Z",
+     "shell.execute_reply": "2025-12-24T12:02:10.814507Z"
     },
     "papermill": {
-     "duration": 3.068923,
-     "end_time": "2025-12-24T09:15:00.154756",
+     "duration": 4.464569,
+     "end_time": "2025-12-24T12:02:10.818073",
      "exception": false,
-     "start_time": "2025-12-24T09:14:57.085833",
+     "start_time": "2025-12-24T12:02:06.353504",
      "status": "completed"
     },
     "tags": []
@@ -35,19 +35,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9e3a13cf",
+   "id": "a6c0a79d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.162003Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.161163Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.179365Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.178512Z"
+     "iopub.execute_input": "2025-12-24T12:02:10.826714Z",
+     "iopub.status.busy": "2025-12-24T12:02:10.826179Z",
+     "iopub.status.idle": "2025-12-24T12:02:10.851932Z",
+     "shell.execute_reply": "2025-12-24T12:02:10.850691Z"
     },
     "papermill": {
-     "duration": 0.023527,
-     "end_time": "2025-12-24T09:15:00.180994",
+     "duration": 0.032791,
+     "end_time": "2025-12-24T12:02:10.854265",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.157467",
+     "start_time": "2025-12-24T12:02:10.821474",
      "status": "completed"
     },
     "tags": []
@@ -72,19 +72,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b815e01c",
+   "id": "63b0f1c9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.188115Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.187423Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.194393Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.193603Z"
+     "iopub.execute_input": "2025-12-24T12:02:10.863091Z",
+     "iopub.status.busy": "2025-12-24T12:02:10.862307Z",
+     "iopub.status.idle": "2025-12-24T12:02:10.870776Z",
+     "shell.execute_reply": "2025-12-24T12:02:10.869796Z"
     },
     "papermill": {
-     "duration": 0.012484,
-     "end_time": "2025-12-24T09:15:00.196133",
+     "duration": 0.015148,
+     "end_time": "2025-12-24T12:02:10.872936",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.183649",
+     "start_time": "2025-12-24T12:02:10.857788",
      "status": "completed"
     },
     "tags": []
@@ -97,19 +97,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7b6f1577",
+   "id": "4a6db719",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.203215Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.202502Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.230777Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.229968Z"
+     "iopub.execute_input": "2025-12-24T12:02:10.881070Z",
+     "iopub.status.busy": "2025-12-24T12:02:10.880689Z",
+     "iopub.status.idle": "2025-12-24T12:02:10.917104Z",
+     "shell.execute_reply": "2025-12-24T12:02:10.916085Z"
     },
     "papermill": {
-     "duration": 0.033849,
-     "end_time": "2025-12-24T09:15:00.232622",
+     "duration": 0.042945,
+     "end_time": "2025-12-24T12:02:10.919017",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.198773",
+     "start_time": "2025-12-24T12:02:10.876072",
      "status": "completed"
     },
     "tags": []
@@ -552,19 +552,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1753e149",
+   "id": "7de8dd48",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.240928Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.240623Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.246360Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.245510Z"
+     "iopub.execute_input": "2025-12-24T12:02:10.928806Z",
+     "iopub.status.busy": "2025-12-24T12:02:10.928430Z",
+     "iopub.status.idle": "2025-12-24T12:02:10.935409Z",
+     "shell.execute_reply": "2025-12-24T12:02:10.934456Z"
     },
     "papermill": {
-     "duration": 0.011703,
-     "end_time": "2025-12-24T09:15:00.247989",
+     "duration": 0.014058,
+     "end_time": "2025-12-24T12:02:10.937309",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.236286",
+     "start_time": "2025-12-24T12:02:10.923251",
      "status": "completed"
     },
     "tags": []
@@ -591,19 +591,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b5060344",
+   "id": "4c74b8bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.255949Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.255379Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.261720Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.260963Z"
+     "iopub.execute_input": "2025-12-24T12:02:10.947334Z",
+     "iopub.status.busy": "2025-12-24T12:02:10.946698Z",
+     "iopub.status.idle": "2025-12-24T12:02:10.957405Z",
+     "shell.execute_reply": "2025-12-24T12:02:10.956131Z"
     },
     "papermill": {
-     "duration": 0.012816,
-     "end_time": "2025-12-24T09:15:00.263965",
+     "duration": 0.020121,
+     "end_time": "2025-12-24T12:02:10.961164",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.251149",
+     "start_time": "2025-12-24T12:02:10.941043",
      "status": "completed"
     },
     "tags": []
@@ -628,19 +628,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c374fc05",
+   "id": "5e03aa8f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.272728Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.272421Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.280185Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.279423Z"
+     "iopub.execute_input": "2025-12-24T12:02:10.971310Z",
+     "iopub.status.busy": "2025-12-24T12:02:10.970588Z",
+     "iopub.status.idle": "2025-12-24T12:02:10.981205Z",
+     "shell.execute_reply": "2025-12-24T12:02:10.980127Z"
     },
     "papermill": {
-     "duration": 0.01386,
-     "end_time": "2025-12-24T09:15:00.281764",
+     "duration": 0.019651,
+     "end_time": "2025-12-24T12:02:10.985059",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.267904",
+     "start_time": "2025-12-24T12:02:10.965408",
      "status": "completed"
     },
     "tags": []
@@ -688,19 +688,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d29140e9",
+   "id": "03d39cc1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.289990Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.289401Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.293557Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.292831Z"
+     "iopub.execute_input": "2025-12-24T12:02:10.996724Z",
+     "iopub.status.busy": "2025-12-24T12:02:10.996351Z",
+     "iopub.status.idle": "2025-12-24T12:02:11.002889Z",
+     "shell.execute_reply": "2025-12-24T12:02:11.001019Z"
     },
     "papermill": {
-     "duration": 0.010138,
-     "end_time": "2025-12-24T09:15:00.295195",
+     "duration": 0.015072,
+     "end_time": "2025-12-24T12:02:11.005790",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.285057",
+     "start_time": "2025-12-24T12:02:10.990718",
      "status": "completed"
     },
     "tags": []
@@ -713,19 +713,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "48d61bc2",
+   "id": "c926267f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.302918Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.302628Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.487728Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.486549Z"
+     "iopub.execute_input": "2025-12-24T12:02:11.015857Z",
+     "iopub.status.busy": "2025-12-24T12:02:11.015452Z",
+     "iopub.status.idle": "2025-12-24T12:02:11.231949Z",
+     "shell.execute_reply": "2025-12-24T12:02:11.230009Z"
     },
     "papermill": {
-     "duration": 0.191468,
-     "end_time": "2025-12-24T09:15:00.489901",
+     "duration": 0.225561,
+     "end_time": "2025-12-24T12:02:11.235338",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.298433",
+     "start_time": "2025-12-24T12:02:11.009777",
      "status": "completed"
     },
     "tags": []
@@ -735,8 +735,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "154.53324495048238 [  24.34516376 -136.7654659   445.7584777   300.79667668  -21.2475777\n",
-      "  -89.21761882 -200.27747607  117.19288979  416.29852819  109.94877626]\n"
+      "150.51945736389476 [  32.3779805  -141.99209438  446.405055    299.42319366  -16.91620277\n",
+      "  -86.79541434 -192.92918359  111.88260496  411.12227949  109.21518936]\n"
      ]
     }
    ],
@@ -747,19 +747,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "54144baa",
+   "id": "afd7a0b3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.498157Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.497826Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.501924Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.501141Z"
+     "iopub.execute_input": "2025-12-24T12:02:11.245052Z",
+     "iopub.status.busy": "2025-12-24T12:02:11.244696Z",
+     "iopub.status.idle": "2025-12-24T12:02:11.249097Z",
+     "shell.execute_reply": "2025-12-24T12:02:11.247970Z"
     },
     "papermill": {
-     "duration": 0.010313,
-     "end_time": "2025-12-24T09:15:00.503599",
+     "duration": 0.01194,
+     "end_time": "2025-12-24T12:02:11.251352",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.493286",
+     "start_time": "2025-12-24T12:02:11.239412",
      "status": "completed"
     },
     "tags": []
@@ -772,19 +772,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "07ddf059",
+   "id": "09a71249",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.511682Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.511012Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.517127Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.516436Z"
+     "iopub.execute_input": "2025-12-24T12:02:11.261324Z",
+     "iopub.status.busy": "2025-12-24T12:02:11.260969Z",
+     "iopub.status.idle": "2025-12-24T12:02:11.269115Z",
+     "shell.execute_reply": "2025-12-24T12:02:11.268017Z"
     },
     "papermill": {
-     "duration": 0.011817,
-     "end_time": "2025-12-24T09:15:00.518695",
+     "duration": 0.015964,
+     "end_time": "2025-12-24T12:02:11.271200",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.506878",
+     "start_time": "2025-12-24T12:02:11.255236",
      "status": "completed"
     },
     "tags": []
@@ -793,7 +793,7 @@
     {
      "data": {
       "text/plain": [
-       "0.4521092793882724"
+       "0.4524991717607635"
       ]
      },
      "execution_count": 11,
@@ -806,21 +806,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2be405e",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003835,
+     "end_time": "2025-12-24T12:02:11.279222",
+     "exception": false,
+     "start_time": "2025-12-24T12:02:11.275387",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "from sklearn"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2ae44601",
+   "id": "f11c7889",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.527076Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.526437Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.569867Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.569071Z"
+     "iopub.execute_input": "2025-12-24T12:02:11.289951Z",
+     "iopub.status.busy": "2025-12-24T12:02:11.289544Z",
+     "iopub.status.idle": "2025-12-24T12:02:11.350761Z",
+     "shell.execute_reply": "2025-12-24T12:02:11.349843Z"
     },
     "papermill": {
-     "duration": 0.049853,
-     "end_time": "2025-12-24T09:15:00.571886",
+     "duration": 0.06998,
+     "end_time": "2025-12-24T12:02:11.353269",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.522033",
+     "start_time": "2025-12-24T12:02:11.283289",
      "status": "completed"
     },
     "tags": []
@@ -831,28 +848,28 @@
     "sgd = SGDRegressor(learning_rate='constant',eta0=0.1)\n",
     "batch_size = 35\n",
     "\n",
-    "for i in range(100):\n",
+    "for i in range(100): #epochs \n",
     "    \n",
     "    idx = random.sample(range(X_train.shape[0]),batch_size)\n",
-    "    sgd.partial_fit(X_train[idx],y_train[idx])"
+    "    sgd.partial_fit(X_train[idx],y_train[idx]) # performs ONE SGD UPDATE (one mini-batch step) on the given samples"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "540e0e94",
+   "id": "67c776cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.580003Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.579724Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.585624Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.584788Z"
+     "iopub.execute_input": "2025-12-24T12:02:11.363927Z",
+     "iopub.status.busy": "2025-12-24T12:02:11.362833Z",
+     "iopub.status.idle": "2025-12-24T12:02:11.369684Z",
+     "shell.execute_reply": "2025-12-24T12:02:11.368691Z"
     },
     "papermill": {
-     "duration": 0.011979,
-     "end_time": "2025-12-24T09:15:00.587323",
+     "duration": 0.01462,
+     "end_time": "2025-12-24T12:02:11.372181",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.575344",
+     "start_time": "2025-12-24T12:02:11.357561",
      "status": "completed"
     },
     "tags": []
@@ -861,10 +878,10 @@
     {
      "data": {
       "text/plain": [
-       "(array([  60.33555897,  -61.29017512,  339.00612631,  226.58209577,\n",
-       "          19.39231823,  -33.24424943, -169.97257257,  117.18207555,\n",
-       "         332.06215258,  118.0792813 ]),\n",
-       " array([151.36618244]))"
+       "(array([  45.01149086,  -70.44802203,  342.91201012,  253.00752169,\n",
+       "          22.11649198,  -25.57976896, -168.43267784,  130.64344711,\n",
+       "         325.53684826,  126.60883411]),\n",
+       " array([160.35062761]))"
       ]
      },
      "execution_count": 13,
@@ -879,19 +896,19 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "520f8646",
+   "id": "2d81612d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-24T09:15:00.596312Z",
-     "iopub.status.busy": "2025-12-24T09:15:00.595605Z",
-     "iopub.status.idle": "2025-12-24T09:15:00.602297Z",
-     "shell.execute_reply": "2025-12-24T09:15:00.601460Z"
+     "iopub.execute_input": "2025-12-24T12:02:11.382357Z",
+     "iopub.status.busy": "2025-12-24T12:02:11.382012Z",
+     "iopub.status.idle": "2025-12-24T12:02:11.389757Z",
+     "shell.execute_reply": "2025-12-24T12:02:11.388668Z"
     },
     "papermill": {
-     "duration": 0.013077,
-     "end_time": "2025-12-24T09:15:00.603891",
+     "duration": 0.015226,
+     "end_time": "2025-12-24T12:02:11.392001",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.590814",
+     "start_time": "2025-12-24T12:02:11.376775",
      "status": "completed"
     },
     "tags": []
@@ -900,7 +917,7 @@
     {
      "data": {
       "text/plain": [
-       "0.4297144562374108"
+       "0.4214840889253687"
       ]
      },
      "execution_count": 14,
@@ -916,13 +933,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2713ce2",
+   "id": "15da6b03",
    "metadata": {
     "papermill": {
-     "duration": 0.003403,
-     "end_time": "2025-12-24T09:15:00.610885",
+     "duration": 0.003822,
+     "end_time": "2025-12-24T12:02:11.399811",
      "exception": false,
-     "start_time": "2025-12-24T09:15:00.607482",
+     "start_time": "2025-12-24T12:02:11.395989",
      "status": "completed"
     },
     "tags": []
@@ -935,7 +952,7 @@
   "kaggle": {
    "accelerator": "none",
    "dataSources": [],
-   "dockerImageVersionId": 31239,
+   "dockerImageVersionId": 31234,
    "isGpuEnabled": false,
    "isInternetEnabled": true,
    "language": "python",
@@ -960,14 +977,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7.336495,
-   "end_time": "2025-12-24T09:15:01.234275",
+   "duration": 10.364954,
+   "end_time": "2025-12-24T12:02:12.124758",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-12-24T09:14:53.897780",
+   "start_time": "2025-12-24T12:02:01.759804",
    "version": "2.6.0"
   }
  },
